--- a/build-scripts/zzz-internal/900-run-compose.yml
+++ b/build-scripts/zzz-internal/900-run-compose.yml
@@ -16,7 +16,7 @@ services:
     healthcheck:
       test:
         - CMD-SHELL
-        - pg_isready && psql -U "testuniqueviolation" -d "testuniqueviolation" -tAc 'SELECT 1'
+        - psql -U "$$POSTGRES_USER" -d "$$POSTGRES_DB" -tAc 'SELECT 1'
       interval: 5s
       timeout: 5s
       retries: 10
